--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@ footer {
 </head>
 <body>
   <nav>
-    <img src="images/seedtime_logo.png" alt="SeedTime Logo" class="logo">
+    <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAZ8AAACtCAYAAABvJ3KGAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAACOYSURBVHhe7Z0LsB1FmcdHSY..." alt="SeedTime Logo" class="logo">
+
     <ul>
       <li><a href="#about">About Us</a></li>
       <li><a href="#thrivefund">ThriveFund Scheme</a></li>
