--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@ footer {
   </nav>
   <section class="hero">
     <h1>Welcome to SEEDTIME CAPITAL MANAGEMENT LIMITED</h1>
-    <p>Empowering your financial future with smart, secure, and high-yield solutions.</p>
+    <p class="justify">Empowering your financial future with smart, secure, and high-yield solutions.</p>
   </section>
   <section id="about">
     <h2>About Us</h2>
-    <p>Founded in 2018, SEEDTIME Capital Management Limited is a distinguished financial services and consultancy firm.<br> We are is a distinguished financial services and consultancy firm that has been empowering clients since 2018. With a robust portfolio of financial solutions and expert guidance, we have consistently supported individuals and businesses in achieving their financial objectives.<br> <br>
+    <p class="justify">Founded in 2018, SEEDTIME Capital Management Limited is a distinguished financial services and consultancy firm. We are is a distinguished financial services and consultancy firm that has been empowering clients since 2018. With a robust portfolio of financial solutions and expert guidance, we have consistently supported individuals and businesses in achieving their financial objectives.<br> <br>
 Our Expertise:<br>
 <li>Comprehensive financial advisory and strategic planning </li>
 <li>Tailored investment solutions designed to balance risk and reward </li>
@@ -151,13 +151,13 @@ Our Expertise:<br>
   </section>
   <section id="thrivefund">
     <h2>ThriveFund Scheme</h2>
-    <p>ThriveFund is a modern savings and investment scheme that has relatively low risk compared to other similar investment schemes. With the ThriveFund Scheme powered BY SEEDTIME CAPITAL MANAGEMENT LIMITED, investors get a higher rate of return than a traditional savings account. Your capital is preserved while generating steady stream of income for you. Are you thinking of investing towards acquiring an asset, paying school fees or for financial freedom? Regardless of what your investment objectives are, the ThriveFund offers a more rewarding way to grow wealth. The fund is invested 100% in high quality short-term securities such as Treasury Bills, Commercial Papers and Fixed Deposits that are rated “BBB” and above. <br> <br> Recognizing the challenges clients face in managing finances, savings, and investment opportunities, the ThriveFund scheme was developed as an innovative solution. It is meticulously engineered to address these challenges by providing a secure, dual-action approach that not only preserves capital but also offers attractive investment returns—thereby enabling our clients to realize their long-term financial management goals.<br> <br>ThriveFund combines disciplined saving with profitable investment:<br>
+    <p class="justify">ThriveFund is a modern savings and investment scheme that has relatively low risk compared to other similar investment schemes. With the ThriveFund Scheme powered BY SEEDTIME CAPITAL MANAGEMENT LIMITED, investors get a higher rate of return than a traditional savings account. Your capital is preserved while generating steady stream of income for you. Are you thinking of investing towards acquiring an asset, paying school fees or for financial freedom? Regardless of what your investment objectives are, the ThriveFund offers a more rewarding way to grow wealth. The fund is invested 100% in high quality short-term securities such as Treasury Bills, Commercial Papers and Fixed Deposits that are rated “BBB” and above. <br> <br> Recognizing the challenges clients face in managing finances, savings, and investment opportunities, the ThriveFund scheme was developed as an innovative solution. It is meticulously engineered to address these challenges by providing a secure, dual-action approach that not only preserves capital but also offers attractive investment returns—thereby enabling our clients to realize their long-term financial management goals.<br> <br>ThriveFund combines disciplined saving with profitable investment:<br><br>
 Saving:<br>
-Importance of secure savings for future financial needs<br>
-Building a reserve for unforeseen circumstances<br> <br>
+<li>Importance of secure savings for future financial needs</li>
+<li>Building a reserve for unforeseen circumstances </li> <br>
 Investment: <br>
-Opportunity to generate returns and grow wealth <br>
-Mitigating inflation’s impact on savings
+<li>Opportunity to generate returns and grow wealth </li>
+<li>Mitigating inflation’s impact on savings </li>
 
 </p>
     <a href="https://thrivefundmarketrateunpaiddashboard-duxzilshsjaxvabytebwsd.streamlit.app/" target="_blank" class="btn">View Dashboard</a>
