Embedded CSS directly into index.html for Streamlit rendering

--- a/index.html
+++ b/index.html
@@ -151,11 +151,13 @@ Our Expertise:<br>
   </section>
   <section id="thrivefund">
     <h2>ThriveFund Scheme</h2>
-    <p class="justify">ThriveFund is a modern savings and investment scheme that has relatively low risk compared to other similar investment schemes. With the ThriveFund Scheme powered BY SEEDTIME CAPITAL MANAGEMENT LIMITED, investors get a higher rate of return than a traditional savings account. Your capital is preserved while generating steady stream of income for you. Are you thinking of investing towards acquiring an asset, paying school fees or for financial freedom? Regardless of what your investment objectives are, the ThriveFund offers a more rewarding way to grow wealth. The fund is invested 100% in high quality short-term securities such as Treasury Bills, Commercial Papers and Fixed Deposits that are rated “BBB” and above. <br> <br> Recognizing the challenges clients face in managing finances, savings, and investment opportunities, the ThriveFund scheme was developed as an innovative solution. It is meticulously engineered to address these challenges by providing a secure, dual-action approach that not only preserves capital but also offers attractive investment returns—thereby enabling our clients to realize their long-term financial management goals.<br> <br>ThriveFund combines disciplined saving with profitable investment:<br><br>
+    <p class="justify">ThriveFund is a modern savings and investment scheme that has relatively low risk compared to other similar investment schemes. With the ThriveFund Scheme powered BY SEEDTIME CAPITAL MANAGEMENT LIMITED, investors get a higher rate of return than a traditional savings account. Your capital is preserved while generating steady stream of income for you. Are you thinking of investing towards acquiring an asset, paying school fees or for financial freedom? Regardless of what your investment objectives are, the ThriveFund offers a more rewarding way to grow wealth. The fund is invested 100% in high quality short-term securities such as Treasury Bills, Commercial Papers and Fixed Deposits that are rated “BBB” and above. </p>
+<p class="justify"> Recognizing the challenges clients face in managing finances, savings, and investment opportunities, the ThriveFund scheme was developed as an innovative solution. It is meticulously engineered to address these challenges by providing a secure, dual-action approach that not only preserves capital but also offers attractive investment returns—thereby enabling our clients to realize their long-term financial management goals.<br> <br>ThriveFund combines disciplined saving with profitable investment:</p> 
+<p>
 Saving:<br>
 <li>Importance of secure savings for future financial needs</li>
 <li>Building a reserve for unforeseen circumstances </li> <br>
-Investment: <br>
+Investment:<br>
 <li>Opportunity to generate returns and grow wealth </li>
 <li>Mitigating inflation’s impact on savings </li>
 
