Embedded CSS directly into index.html for Streamlit rendering

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ footer {
   </section>
   <section id="about">
     <h2>About Us</h2>
-    <p style="text-align: justify;">Founded in 2018, SEEDTIME Capital Management Limited is a distinguished financial services and consultancy firm. We are is a distinguished financial services and consultancy firm that has been empowering clients since 2018. With a robust portfolio of financial solutions and expert guidance, we have consistently supported individuals and businesses in achieving their financial objectives.<br> <br>
+    <p style="text-align: justify;">Founded in 2018, SEEDTIME Capital Management Limited is a distinguished financial services and consultancy firm. We are a distinguished financial services and consultancy firm that has been empowering clients since 2018. With a robust portfolio of financial solutions and expert guidance, we have consistently supported individuals and businesses in achieving their financial objectives.<br> <br>
 Our Expertise:<br>
 <li>Comprehensive financial advisory and strategic planning </li>
 <li>Tailored investment solutions designed to balance risk and reward </li>
