Embedded PDF and Word Documnt links into html file

--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@ footer {
   color: white;
 }
 
+.btn:hover, .resource-btn:hover { background: #006400; }
+    #services ul { list-style: disc; padding-left: 20px; }
+    form { margin-top: 20px; }
+    form input, form textarea { width: 100%; padding: 12px; margin: 8px 0; border: 1px solid #ccc; border-radius: 4px; }
+    form button { background: #006400; color: white; border: none; padding: 14px 20px; border-radius: 5px; cursor: pointer; }
+    form button:hover { background: #228B22; }
+    footer { text-align: center; padding: 20px; background: #006400; color: white; }
+
 </style>
 
 </head>
@@ -131,6 +139,7 @@ footer {
       <li><a href="#about">About Us</a></li>
       <li><a href="#thrivefund">ThriveFund Scheme</a></li>
       <li><a href="#services">Services</a></li>
+      <li><a href="#resources">Resources</a></li>
       <li><a href="#contact">Contact Us</a></li>
       <li><a href="#blog">Blog</a></li>
   
@@ -175,6 +184,12 @@ Investment:<br>
     </ul>
   </section>
 
+<section id="resources">
+    <h2>Resources</h2>
+    <p>Click below to view our helpful documents about the ThriveFund scheme:</p>
+    <a href="https://docs.google.com/document/d/1_44JGZhoJuZtubZCXT1cePS4lBhIYxsM/edit?usp=sharing" target="_blank" class="resource-btn">📖 ThriveFund FAQ (Word)</a>
+    <a href="https://docs.google.com/presentation/d/1ULTNy8r1eXG8V-s2vleMcKhkqW5LJhlD/edit?usp=sharing" target="_blank" class="resource-btn">📊 ThriveFund Presentation (Slides)</a>
+  </section>
 
   <section id="contact">
     <h2>Contact Us</h2>
