Embedded PDF and Word Documnt links into html file

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ footer {
 
   <section class="hero">
     <h1>Welcome to SEEDTIME CAPITAL MANAGEMENT LIMITED</h1>
-    <p style="text-align: justify;">Empowering your financial future with smart, secure, and high-yield solutions.</p>
+    <p>Empowering your financial future with smart, secure, and high-yield solutions.</p>
   </section>
   <section id="about">
     <h2>About Us</h2>
@@ -187,8 +187,8 @@ Investment:<br>
 <section id="resources">
     <h2>Resources</h2>
     <p>Click below to view our helpful documents about the ThriveFund scheme:</p>
-    <a href="https://docs.google.com/document/d/1_44JGZhoJuZtubZCXT1cePS4lBhIYxsM/edit?usp=sharing" target="_blank" class="resource-btn">📖 ThriveFund FAQ (Word)</a>
-    <a href="https://docs.google.com/presentation/d/1ULTNy8r1eXG8V-s2vleMcKhkqW5LJhlD/edit?usp=sharing" target="_blank" class="resource-btn">📊 ThriveFund Presentation (Slides)</a>
+    <a href="https://docs.google.com/document/d/1_44JGZhoJuZtubZCXT1cePS4lBhIYxsM/edit?usp=sharing" target="_blank" class="resource-btn">📖 ThriveFund FAQ</a>
+    <a href="https://docs.google.com/presentation/d/1ULTNy8r1eXG8V-s2vleMcKhkqW5LJhlD/edit?usp=sharing" target="_blank" class="resource-btn">📊 ThriveFund Presentation</a>
   </section>
 
   <section id="contact">
