added the Redemption form link

--- a/index.html
+++ b/index.html
@@ -133,8 +133,25 @@ footer {
 
 .resource-btn:hover {
   background: #006400;
+}
+
+.resource-btn {
+  display: inline-block;
+  background-color: #228B22;
+  color: white;
+  padding: 12px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+  margin: 8px 5px 8px 0;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+  font-weight: bold;
+}
+
+.resource-btn:hover {
+  background-color: #006400;
   transform: translateY(-2px);
 }
+
 
 </style>
 
@@ -198,6 +215,8 @@ Investment:<br>
   <p>Click below to view our helpful documents about the ThriveFund scheme:</p>
   <a href="https://drive.google.com/file/d/1fd6mk3juD5hDv7Mv9XSxd4U3NGvoZKPH/view?usp=sharing" target="_blank" class="resource-btn">📖 ThriveFund FAQ</a>
   <a href="https://drive.google.com/file/d/1b0wrChk4aaqrQBdw5OTQk-ZJnZH90Edv/view?usp=sharing" target="_blank" class="resource-btn">📊 ThriveFund Presentation</a>
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSfaa02A7BhA3odgslPMdjaNb9ZBDNSZ0KMK87Hh1BWVJHLuOg/viewform?usp=dialog" target="_blank" class="resource-btn">📝 ThriveFund Redemption Form</a>
+
 </section>
 
   <section id="contact">
