add some script to the service section

--- a/index.html
+++ b/index.html
@@ -203,11 +203,56 @@ Investment:<br>
   </section>
   <section id="services">
     <h2>Our Services</h2>
-    <ul>
-      <li>Financial Advisory</li>
-      <li>Investment Management</li>
-      <li>Deposit Mobilization</li>
-    </ul>
+    
+<p  style="text-align: justify;">
+📌 <b>Our Services</b> <br>
+At SeedTime Capital Management Limited, we are committed to providing tailored financial solutions designed to meet the unique needs of individuals, businesses, and institutions. Our expertise cuts across multiple segments of the financial services industry, offering a well-rounded suite of value-driven services: <br><br> 
+</p>
+
+
+<p  style="text-align: justify;">
+💼 <b>Financial Advisory</b> <br>
+We deliver professional financial advisory services that help our clients make informed, strategic decisions about their personal and business finances. Our advisory team works closely with clients to understand their financial goals, risk appetite, and market opportunities to offer expert recommendations in areas such as: <br>
+•	Personal and Corporate Financial Planning <br>
+•	Business Expansion & Capital Structuring Advisory <br>
+•	Debt Restructuring & Credit Advisory <br>
+•	Asset Allocation & Portfolio Optimization <br>
+•	Tax Efficiency Planning <br>
+•	Financial Due Diligence & Valuation Services <br><br>
+</p>
+
+
+<p  style="text-align: justify;">
+📊 <b>Investment Management </b> <br>
+Our investment management services are designed to help clients grow, preserve, and optimize their wealth. We employ a disciplined, research-driven approach to managing investment portfolios with a focus on delivering consistent returns while effectively managing risk. Our services include:<br>
+•	Portfolio Construction & Management <br>
+•	Alternative Investment Opportunities <br>
+•	Fixed Income & Equities Management <br>
+•	Wealth Preservation & Legacy Planning <br>
+•	Private Investment Deals & Syndications <br>
+•	Mutual Funds & Collective Investment Schemes <br><br>
+</p>
+
+<p  style="text-align: justify;">
+💰 <b>Deposit Mobilization </b> <br>
+As a trusted financial institution, we offer secure, competitive deposit mobilization services to help clients earn attractive returns on their idle funds while contributing to the growth of the economy. Our deposit products are tailored to suit varying financial objectives and liquidity needs. Services include:<br>
+•	Call Deposits & Fixed Deposits<br>
+•	Structured Deposit Plans <br>
+•	Target Savings & Investment Accounts <br>
+•	Special Purpose Investment Vehicles (SPIVs) <br> 
+•	Corporate & Institutional Deposits Mobilization <br><br>
+
+</p>
+
+<p  style="text-align: justify;">
+✨ <b>Why Choose Us?</b> <br>
+•	Experienced Financial Experts <br>
+•	Client-Centric Advisory Approach <br>
+•	Flexible & Customizable Investment Products <br>
+•	Transparent, Ethical & Professional Conduct <br>
+•	Secure, Reliable & Technology-Driven Operations <br> <br> 
+<b>At SeedTime Capital Management Limited,</b> your financial growth is our mission.<br> <br>
+</p>
   </section>
 
 <section id="resources">
